--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "scripts": {
     "test": "jest"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0",
+    "html-validator": "^6.0.1"
   }
 }
