--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Validate HTML
       id: validate-html
-      uses: webtech-network/web-code-autograding@v1
+      uses: ./.github/actions/action-command-grader
       with:
         test-name: Validate HTML
         setup-command: npm install
@@ -24,7 +24,7 @@ jobs:
         timeout: 10
         max-score: 100
     - name: Autograding Reporter
-      uses: classroom-resources/autograding-grading-reporter@v1
+      uses: ./.github/actions/action-reporter-grader
       env:
         VALIDATE-HTML_RESULTS: "${{steps.validate-html.outputs.result}}"
       with:
