--- a/.github/actions/command-grader-action/action.yml
+++ b/.github/actions/command-grader-action/action.yml
@@ -29,4 +29,4 @@ outputs:
     description: "Outputs the result of the grader, indicating the success or failure of the test."
 runs:
   using: 'node20'
-  main: 'dist/command/main.js'
+  main: '${{ github.workspace }}/dist/command/main.js'
