Corrigindo comando de verificação

--- a/.github/actions/command-grader-action/action.yml
+++ b/.github/actions/command-grader-action/action.yml
@@ -37,6 +37,6 @@ runs:
       working-directory: ${{ github.workspace }}
 
     - name: "Executa testes"
-      run: './dist/command/main.js'
+      run: 'node ./dist/command/main.js'
       shell: bash
       working-directory: ${{ github.workspace }}
