--- a/.github/actions/reporter-grader-action/action.yml
+++ b/.github/actions/reporter-grader-action/action.yml
@@ -22,6 +22,6 @@ runs:
       working-directory: ${{ github.workspace }}
 
     - name: "Executa testes"
-      run: './dist/reporter/main.js'
+      run: 'node ./dist/reporter/main.js'
       shell: bash
       working-directory: ${{ github.workspace }}
