--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -18,14 +18,30 @@ jobs:
       uses: webtech-network/web-code-autograding/actions/command-grader-action@v1
       with:
         test-name: Validate HTML
-        setup-command: npm install
-        command: npm test validateHTML.test.js
-        procedure: validateHTMLFile
+        # setup-command: npm install
+        # command: npm test validateHTML.test.js
+        # command-type: cmd
+        command: validateHTMLFile
+        command-type: function
+        weight: 50
+        timeout: 10
+        max-score: 100
+    - name: Validate CSS
+      id: validate-css
+      uses: webtech-network/web-code-autograding/actions/command-grader-action@v1
+      with:
+        test-name: Validate CSS
+        # setup-command: npm install
+        # command: npm test validateCSS.test.js
+        # command-type: cmd
+        command: validateCSSFile
+        command-type: function
+        weight: 50
         timeout: 10
         max-score: 100
     - name: Autograding Reporter
-      uses: classroom-resources/autograding-grading-reporter@v1
+      uses: webtech-network/web-code-autograding/actions/reporter-grader-action@v1
       env:
         VALIDATE-HTML_RESULTS: "${{steps.validate-html.outputs.result}}"
       with:
-        runners: validate-html
+        runners: validate-html, validate-css
