--- a/package.json
+++ b/package.json
@@ -2,29 +2,5 @@
   "private": true,
   "version": "0.0.0",
   "name": "example",
-  "scripts": {
-    "test": "jest",
-    "build": "esbuild tests/command/main.js --bundle --minify --platform=node --outfile=dist/command/main.js && esbuild tests/reporter/main.js --bundle --minify --platform=node --outfile=dist/reporter/main.js"
-  },
-  "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/exec": "^1.1.1",
-    "@actions/github": "^6.0.0",
-    "cheerio": "^1.0.0",
-    "cli-table3": "^0.6.5",
-    "html-validator": "^6.0.1"
-  },
-  "devDependencies": {
-    "esbuild": "0.19.5",
-    "esbuild-plugin-babel": "^0.2.3",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-n": "^16.2.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.7.0",
-    "prettier": "3.0.3"
-  }
+  "scripts": {}
 }
