--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -18,7 +18,7 @@ jobs:
       uses: webtech-network/web-code-autograding/actions/command-grader-action@v1
       with:
         test-name: Validate GIT
-        # setup-command: npm install
+        setup-command: npm install
         # command: npm test validateGIT.test.js
         # command-type: cmd
         command: validateGITRepo
@@ -31,7 +31,7 @@ jobs:
       uses: webtech-network/web-code-autograding/actions/command-grader-action@v1
       with:
         test-name: Validate HTML
-        # setup-command: npm install
+        setup-command: npm install
         # command: npm test validateHTML.test.js
         # command-type: cmd
         command: validateHTMLFile
@@ -44,7 +44,7 @@ jobs:
       uses: webtech-network/web-code-autograding/actions/command-grader-action@v1
       with:
         test-name: Validate CSS
-        # setup-command: npm install
+        setup-command: npm install
         # command: npm test validateCSS.test.js
         # command-type: cmd
         command: validateCSSFile
