--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,19 +13,19 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Validate GIT
-      id: validate-git
-      uses: webtech-network/web-code-autograding/actions/command-grader-action@v1
-      with:
-        test-name: Validate GIT
-        setup-command: npm install
-        # command: npm test validateGIT.test.js
-        # command-type: cmd
-        command: validateGITRepo
-        command-type: function
-        weight: 20
-        timeout: 10
-        max-score: 100
+    # - name: Validate GIT
+    #   id: validate-git
+    #   uses: webtech-network/web-code-autograding/actions/command-grader-action@v1
+    #   with:
+    #     test-name: Validate GIT
+    #     setup-command: npm install
+    #     # command: npm test validateGIT.test.js
+    #     # command-type: cmd
+    #     command: validateGITRepo
+    #     command-type: function
+    #     weight: 20
+    #     timeout: 10
+    #     max-score: 100
     - name: Validate HTML
       id: validate-html
       uses: webtech-network/web-code-autograding/actions/command-grader-action@v1
@@ -55,8 +55,9 @@ jobs:
     - name: Autograding Reporter
       uses: webtech-network/web-code-autograding/actions/reporter-grader-action@v1
       env:
-        VALIDATE-GIT_RESULTS: "${{steps.validate-git.outputs.result}}"
+        # VALIDATE-GIT_RESULTS: "${{steps.validate-git.outputs.result}}"
         VALIDATE-HTML_RESULTS: "${{steps.validate-html.outputs.result}}"
         VALIDATE-CSS_RESULTS: "${{steps.validate-css.outputs.result}}"
       with:
-        runners: validate-git,validate-html,validate-css
+        # runners: validate-git,validate-html,validate-css
+        runners: validate-html,validate-css
