--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -49,7 +49,18 @@ jobs:
         # command-type: cmd
         command: validateCSSFile
         command-type: function
-        weight: 40
+        weight: 20
+        timeout: 10
+        max-score: 100
+    - name: Validate CSS 2
+      id: validate-css2
+      uses: webtech-network/web-code-autograding/actions/command-grader-action@v1
+      with:
+        test-name: Validate CSS 2
+        setup-command: npm install
+        command: npm test validateCSS.test.js
+        command-type: cmd
+        weight: 20
         timeout: 10
         max-score: 100
     - name: Autograding Reporter
@@ -60,4 +71,4 @@ jobs:
         VALIDATE-CSS_RESULTS: "${{steps.validate-css.outputs.result}}"
       with:
         # runners: validate-git,validate-html,validate-css
-        runners: validate-html,validate-css
+        runners: validate-html,validate-css,validate-css2
